# cognix

./: .gitignore  AGENTS.md  docker-compose.yml  package.json  skills-lock.json
apps/server/: drizzle.config.ts  package.json
apps/server/drizzle/: 0001_natural_carnage.sql  0002_worried_thunderball.sql  0003_sparkling_alex_wilder.sql
apps/server/migrations/: env.py
apps/server/public/: neet_blueprint.json
apps/server/scripts/: seed_turbo.ts
apps/server/src/: index.ts
apps/web/: components.json  next.config.ts  package.json  proxy.ts  vite.config.ts
apps/web/app/: globals.css  layout.tsx
apps/web/components/: google-logo.tsx  logo.tsx
apps/web/hooks/: use-dashboard-data.ts  use-exam-session.ts
apps/web/lib/: auth-client.ts  auth.ts  button-link-styles.ts  server-api.ts  tests-api.ts  validation.ts
apps/web/src/: index.css  routeTree.gen.ts
apps/web/types/: react-hook-form.d.ts
client/: README.md  pubspec.yaml
client/ios/Runner.xcodeproj/: project.pbxproj
client/lib/: main.dart
client/lib/providers/: auth_provider.dart
client/web/: index.html  manifest.json
mobile (deprecated)/: pubspec.yaml
server/: pyproject.toml
server/app/: main.py
server/app/api/: deps.py
server/app/api/endpoints/: auth.py
server/app/core/: config.py  email.py
server/app/models/auth/: account.py  session.py  user.py
server/app/services/: auth.py
web/: components.json  index.html  openapi-ts.config.ts  package.json  tsconfig.app.json  vite.config.ts
web/src/: App.tsx  index.css  main.tsx  routeTree.gen.ts
web/src/lib/: auth.ts  validation.ts
(+98 files in other folders)
