[project]
name = "cognix-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "geetheswar-v", email = "geetheswar.edu@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.128.1",
    "passlib[argon2]>=1.7.4",
    "pydantic-settings>=2.12.0",
    "pyjwt>=2.11.0",
    "sqlmodel>=0.0.32",
    "uvicorn[standard]>=0.40.0",
]
